# DoD_assignment_2

./: .gitignore  pic1_sobel.pgm
design ressources/: A2-02203.drawio  asmd.drawio  edgedetector.drawio
golden_model/: CMakeLists.txt  main.cpp  matplotlibcpp.h
golden_model/cmake/: matplotlib_cppConfig.cmake.in
golden_model/examples/: animation.cpp  bar.cpp  basic.cpp  colorbar.cpp  contour.cpp  fill.cpp  fill_inbetween.cpp  lines3d.cpp  minimal.cpp  modern.cpp  nonblock.cpp  spy.cpp  subplot2grid.cpp  surface.cpp  update.cpp  xkcd.cpp
other_images/: cross_result.pgm  illusion_result.pgm  kaleidoscope_result.pgm  pattern_result.pgm  pic1_result.pgm  systemverilog_result.pgm
task0/: acc2.sv
task2/: acc2.sv  buffers.sv  compare_pictures.py  datapath.sv  memory2.sv  mux.sv  pattern_result.pgm  pattern_sobel.pgm  pic1_result.pgm  pic1_result.pgm_full.txt  pic1_sobel.pgm  sobel_pgm.py  test2.sv
task2/golden/: cross_sobel.pgm  illusion_sobel.pgm  kaleidoscope_sobel.pgm  pattern_sobel.pgm  pic1_sobel.pgm  systemverilog_sobel.pgm
task3/: acc2.sv
